src/test/ui/issues/issue-21596.stderr
error[E0599]: the method `to_string` exists for raw pointer `*const u8`, but its trait bounds were not satisfied
  --> $DIR/issue-21596.rs:4:22
   |
LL |     println!("{}", z.to_string());
   |                      ^^^^^^^^^ method cannot be called on `*const u8` due to unsatisfied trait bounds
   |
   = note: try using `<*const T>::as_ref()` to get a reference to the type behind the pointer: https://doc.rust-lang.org/std/primitive.pointer.html#method.as_ref
   = note: using `<*const T>::as_ref()` on a pointer which is unaligned or points to invalid or uninitialized memory is undefined behavior
   = note: the following trait bounds were not satisfied:
           `*const u8: std::fmt::Display`
           which is required by `*const u8: ToString`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
